cloud-infrastructure/cdk-eks-k8s/services/hello/manifests/hello-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: hello-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: hello-service
